alignment issues

--- a/src/sass/includes/_buttons.scss
+++ b/src/sass/includes/_buttons.scss
@@ -62,6 +62,14 @@
 		}
 	}
 }
+
+@media (min-width: #{$small-desktop}) {
+	.button-states {
+		display: flex;
+		align-items: center;
+	}
+}
+
 .button-description {
 	h6 {
 		text-transform: uppercase;
@@ -163,113 +171,6 @@
 		}
 	}
 }
-
-// Costco
-// .nav-container:first-of-type nav {
-// 	border-bottom: none;
-// }
-
-// .nav-bar nav {
-// 	border-bottom: 1px solid #f2f2f2;
-// 	padding-bottom: 8px;
-// 	&:after {
-// 		content: '';
-// 		width: 100%;
-// 		height: 1px;
-// 		background:#f2f2f2;
-// 	}
-// 	ul {
-// 		margin: 0;
-// 		padding-left: 0;
-// 		display: flex;
-// 		justify-content: space-around;
-// 		align-items: center;
-// 		align-content: center;
-// 		position: relative;
-// 		&.full-nav:after {
-// 			content: '';
-// 			width: 100%;
-// 			height: 1px;
-// 			background-color: #f2f2f2;
-// 			position: absolute;
-// 			bottom: 6px;
-// 		}
-// 		li {
-// 			float: left;
-// 			list-style-type: none;
-// 			color: #007bda;
-// 			font-weight: bold;
-// 			margin: 0 5px;
-// 			font-size: 8px;
-// 			cursor: pointer;
-// 			z-index: 2;
-// 			button {
-// 				background-color: #007bda;
-// 				color: #FFF;
-// 				border: none;
-// 				padding: 5px;
-// 				font-size: 8px;
-// 				margin-right: 15px;
-// 				padding-left: 15px;
-// 				cursor: pointer;
-// 			}
-// 			&.menu-active {
-// 				background-color: $dark-blue;
-// 				color: #FFF;
-// 				padding: 2px 5px;
-// 				position: relative;
-// 				cursor: auto;
-// 			}
-// 			.sub-menu {
-// 				flex-direction: column;
-// 				align-items: flex-start;
-// 				background-color: $gray;
-// 				position: absolute;
-// 				left: -1px;
-// 				top: 17px;
-// 				min-width: 110px;
-// 				padding: 3px 10px;
-// 				box-shadow: 0 0 5px rgba(0,0,0,.2);
-// 				&.large-dropdown {
-// 					width: 350px;
-// 					column-count: 3;
-// 					left: -150px;
-// 					display: block;
-// 				}
-// 				li {
-// 					padding: 1px 0;
-// 					font-weight: lighter;
-// 				}
-// 			}
-// 			.cart {
-// 				width: 40px;
-// 				height: 40px;
-// 				border-radius: 50px;
-// 				background-color: #f69d38;
-// 				background-image: url('../img/costco/cart.png');
-// 				background-size: 42%;
-// 				background-repeat: no-repeat;
-// 				background-position: 12px 12px;
-// 				&:after {
-// 					content: '0';
-//     				padding: 5px 8px;
-// 					border-radius: 50%;
-// 					background: #FFF;
-// 					border: 2px solid #007bda;
-// 					position: relative;
-// 					top: -2px;
-// 					right: 9px;
-// 				}
-// 			}
-// 			.logo {
-// 				max-height: 40px;
-// 				position: relative;
-// 				top: -5px;
-// 			}
-// 		}
-// 	}
-// }
-
 
 //  ===== Controls 3.2 =====
 //  ===== 3.2.1 Main Navigation Bar =====
