--- a/src/sass/includes/_iconography.scss
+++ b/src/sass/includes/_iconography.scss
@@ -16,7 +16,7 @@
 			align-items: center;
 			flex-wrap: wrap;
 			margin-bottom: 10%;
-  		margin-top: 10%;
+			margin-top: 10%;
 		}
 		.nav-icons img {
 			width: 300px;
@@ -34,6 +34,12 @@
 	}
 }
 
+@media (min-width: 1280px) {
+	.tile-icons img:nth-child(4) {
+		padding-right: 25%;
+	}
+}
+
 //icon-specific styles
 
 .icon-container {
@@ -41,8 +47,8 @@
 	padding-bottom: 10%;
 
 	img {
-		margin: 3% 4%;
-		height: 90px;
+		margin: 3% 2%;
+		height: 80px;
 	}
 
 	.icon-cart {
